# internal-chatbot

./: .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  create-deployment-package.ps1  deploy-script.bat  deploy-script.sh  deployment-guide.md  docker-compose.yml  manual_ingest.py  pyproject.toml  quick_db_access.py  test_feedback_api.py  truncate_tables.py  wait_for_db.py
.github/workflows/: ci.yml
api/: Dockerfile  alerting_system.py  app.py  auth.py  config.py  dao.py  embedding_cache.py  embeddings.py  feedback_clean.py  file_cleanup.py  file_watcher.py  improvement_tracker.py  ingest_files.py  local_model.py  logging_config.py  main.py  metrics.py  models.py  monitoring_service.py  performance_monitor.py  query_history_dao.py  query_result_cache.py  query_rewriter.py  rag_service.py  requirements.txt  response_cache.py  scheduled_cleanup.py  wait_for_db.py
api/static/: admin.html  alert-management.html  analytics-enhanced.html  analytics.html  database-debug.html  debug-dashboard.html  feedback-dashboard.html  feedback-management-enhanced.html  feedback-stats.html  health.html  history-dashboard.html  history.html  index.html  keyword-search-debug.html  monitoring-dashboard.html  performance-dashboard.html  personal-feedback-widget.html  recent-improvements-widget.html  search-debug.html  system-dashboard.html  system-stats.html
db/: enhanced_feedback_schema.sql  init_db.sql  init_enhanced_feedback.sql  migrate_feedback_schema.py  optimize_feedback_indexes.sql  query_history_schema.sql  run_migration.bat  run_migration.sh
(+9 files in other folders)
